--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.19.1",
+    "dotenv": "^8.2.0",
     "graphql": "^15.4.0",
-    "lodash": "^4.17.20"
+    "lodash": "^4.17.20",
+    "mongoose": "^5.11.10",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
