--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "@testing-library/user-event": "^12.6.0",
     "apollo-link-context": "^1.0.20",
     "graphql": "^15.4.0",
+    "graphql.macro": "^1.4.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
   },
