--- a/backend/package.json
+++ b/backend/package.json
@@ -4,23 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test jest --verbose --runInBand",
+    "lint": "eslint .",
+    "lintfix": "eslint --fix"
   },
   "author": "Anna Lehto",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.19.1",
+    "apollo-server": "^2.19.2",
+    "apollo-server-integration-testing": "^2.3.0",
+    "apollo-server-testing": "^2.19.2",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
-    "graphql": "^15.4.0",
+    "graphql": "^0.12.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.10",
+    "mongoose": "^5.11.13",
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "@shelf/jest-mongodb": "^1.2.3",
+    "eslint": "^7.18.0",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.7"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
