--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "apollo-link-context": "^1.0.20",
+    "date-fns": "^2.16.1",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "graphql.macro": "^1.4.2",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
+    "react-datepicker": "^3.4.1",
     "react-dom": "^17.0.1",
-    "react-modern-calendar-datepicker": "^3.1.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "semantic-ui-css": "^2.4.1",
