--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.3.6",
+    "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "apollo-link-context": "^1.0.20",
     "date-fns": "^2.16.1",
+    "fontsource-roboto": "^4.0.0",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
     "graphql.macro": "^1.4.2",
@@ -17,8 +19,6 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
