--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
     "date-fns": "^2.16.1",
+    "flatlist-react": "^1.5.0",
     "fontsource-roboto": "^4.0.0",
     "formik": "^2.2.6",
     "graphql": "^15.4.0",
