--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.19.2",
+    "apollo-server-express": "^2.21.1",
     "apollo-server-integration-testing": "^2.3.0",
     "apollo-server-testing": "^2.19.2",
     "bcrypt": "^5.0.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "graphql": "^0.12.0",
+    "graphql-playground-middleware-express": "^1.7.22",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.11.13",
