--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/client": "^3.4.8",
+    "@apollo/client": "^3.4.10",
     "@material-ui/core": "^4.12.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
@@ -14,20 +14,20 @@
     "flatlist-react": "^1.5.0",
     "fontsource-roboto": "^4.0.0",
     "formik": "^2.2.9",
-    "graphql": "^15.5.1",
+    "graphql": "^15.5.2",
     "graphql.macro": "^1.4.2",
     "react": "^17.0.2",
     "react-calendar": "^3.4.0",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.1",
-    "styled-components": "^5.3.0",
+    "styled-components": "^5.3.1",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && cp -r build ../backend/ && rm -r build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
