--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build frontend
         run: cd ./frontend && npm run build
 
-      - name: Only run this if file ./build/index.html exists
-        run: '(test -f ./frontend/build/index.html && echo ./frontend/build/index.html exists) || echo ./build/index.html does not exist, skipping step'
+      - name: Only run this if file .backend/build/index.html exists
+        run: '(test -f ./backend/build/index.html && echo ./backend/build/index.html exists) || echo ./backend/build/index.html does not exist, skipping step'
 
       - name: Deploy to Heroku
         if: ${{ github.event_name == 'push' && !contains(join(toJson(github.event.commits.*.message)), '#skip') }}
