--- a/.github/workflows/deployment-pipeline.yml
+++ b/.github/workflows/deployment-pipeline.yml
@@ -18,12 +18,12 @@ jobs:
           node-version: '12.x'
 
       - name: Npm install 
-        run: cd ./backend && npm ci && cd ../frontend && npm ci
+        run: npm ci && cd ./frontend && npm ci
 
       - name: Build frontend
-        run: cd ./frontend && npm run build
+        run: npm run build:ui
 
-      - name: Only run this if file ./backend/build/index.html exists
+      - name: Does file ./backend/build/index.html exist?
         run: '(test -f ./backend/build/index.html && echo ./backend/build/index.html exists) || echo ./backend/build/index.html does not exist, skipping step'
 
       - name: Deploy to Heroku
@@ -31,9 +31,9 @@ jobs:
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "meidanmokki" #Must be unique in Heroku
+          heroku_app_name: "mokkikirja" #Must be unique in Heroku
           heroku_email: ${{secrets.MAIL}}
-          healthcheck: "https://meidanmokki.herokuapp.com/health"
+          healthcheck: "https://mokkikirja.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
           
