--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:ui": "cd ./frontend && npm run build && cp -r build ../backend/ && rm -rf build",
     "start": "NODE_ENV=production node app.js",
+    "dev": "NODE_ENV=development nodemon index.js",
     "dev:backend": "cd ./backend && NODE_ENV=development nodemon index.js",
     "dev:frontend": "cd ./frontend && npm start",
     "test": "NODE_ENV=test jest --verbose --runInBand",
@@ -15,24 +16,24 @@
   "author": "Anna Lehto",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.25.2",
-    "apollo-server-express": "^2.25.2",
+    "apollo-server": "^2.25.3",
+    "apollo-server-express": "^2.25.3",
     "apollo-server-integration-testing": "^2.3.1",
-    "apollo-server-testing": "^2.25.2",
+    "apollo-server-testing": "^2.25.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^8.6.0",
-    "express": "^4.17.1",
+    "express": "^4.17.2",
     "graphql": "^0.12.3",
-    "graphql-playground-middleware-express": "^1.7.22",
+    "graphql-playground-middleware-express": "^1.7.23",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.8",
+    "mongoose": "^5.13.14",
     "mongoose-unique-validator": "^2.0.3"
   },
   "devDependencies": {
     "@shelf/jest-mongodb": "^1.3.4",
     "eslint": "^7.32.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.15"
   },
   "jest": {
     "testEnvironment": "node"
